--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai-spies": "^0.7.1",
     "express": "^4.14.0",
     "express-session": "^1.15.2",
+    "heroku": "^0.2.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "pg": "^6.1.4",
